--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -513,7 +513,7 @@
     "   \n",
     "    return 'unspecified'\n",
     "\n",
-    "# Apply the function\n",
+    "\n",
     "Employee_df['gender_cleaned'] = Employee_df.apply(resolve_gender, axis=1)"
    ]
   },
@@ -823,36 +823,6 @@
    "source": [
     "conflicts = Employee_df[Employee_df['gender'] != Employee_df['Gender']]\n",
     "print(conflicts[['Employee_ID', 'gender', 'Gender', 'first_name', 'last_name']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "d6fa6e06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def resolve_gender(row):\n",
-    "    g1=str(row['gender']).strip().lower()\n",
-    "    g2 = str(row['Gender']).strip().lower()\n",
-    "\n",
-    "    if g1==g2:\n",
-    "        return g1\n",
-    "    \n",
-    "    if g1 =='other' and g2  in['male','female']:\n",
-    "        return g2\n",
-    "    if g2 == 'other' and g1  in['male','female']:\n",
-    "        return g1\n",
-    "    \n",
-    "    priority = ['genderfluid', 'genderqueer', 'female', 'male', 'other']\n",
-    "    \n",
-    "    for identity in priority:\n",
-    "        if identity in [g1,g2]:\n",
-    "            return identity\n",
-    "\n",
-    "    return 'unspecified'    \n",
-    "\n",
-    "Employee_df['cleaned_gender']=Employee_df.apply(resolve_gender,axis=1)"
    ]
   },
   {
@@ -1828,25 +1798,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6ca29517",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\localadmin\\AppData\\Local\\Temp\\ipykernel_10908\\2523736722.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  Employee_df['attrition'] = Employee_df['attrition'].fillna(False)\n"
-     ]
-    }
-   ],
-   "source": [
-    "Employee_df['attrition'] = Employee_df['attrition'].fillna(False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "id": "b77b77a0",
    "metadata": {},
@@ -2416,25 +2367,6 @@
    ],
    "source": [
     "active_with_attrition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "355ecdd3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\localadmin\\AppData\\Local\\Temp\\ipykernel_10908\\603816198.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  active_with_attrition['attrition'] = active_with_attrition['attrition'].fillna(False)\n"
-     ]
-    }
-   ],
-   "source": [
-    "active_with_attrition['attrition'] = active_with_attrition['attrition'].fillna(False)"
    ]
   },
   {
@@ -3920,41 +3852,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "4a918cf5",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'NumPromotions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\localadmin\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'NumPromotions'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[80]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mGrowthIndex\u001b[39m\u001b[33m'\u001b[39m] = (\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     (\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mNumPromotions\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m / (df[\u001b[33m'\u001b[39m\u001b[33mJob_Tenure\u001b[39m\u001b[33m'\u001b[39m] + \u001b[32m1\u001b[39m)) + \n\u001b[32m      3\u001b[39m     (df[\u001b[33m'\u001b[39m\u001b[33mTraining_Hours\u001b[39m\u001b[33m'\u001b[39m] / (df[\u001b[33m'\u001b[39m\u001b[33mJob_Tenure\u001b[39m\u001b[33m'\u001b[39m] + \u001b[32m1\u001b[39m))\n\u001b[32m      4\u001b[39m )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\localadmin\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\localadmin\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'NumPromotions'"
-     ]
-    }
-   ],
-   "source": [
-    "df['GrowthIndex'] = (\n",
-    "    (df['NumPromotions'] / (df['Job_Tenure'] + 1)) + \n",
-    "    (df['Training_Hours'] / (df['Job_Tenure'] + 1))\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "id": "8f332f9c",
    "metadata": {},
@@ -3980,14 +3877,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "aa480081",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['GrowthIndex'] = (\n",
-    "    (df['Performance_Rating'] / 5) +  # Normalize rating (scale 1–5)\n",
-    "    (df['Training_Hours'] / (df['Job_Tenure'] + 1))   # Training intensity # Penalize stagnation\n",
+    "    (df['Performance_Rating'] / 5) + \n",
+    "    (df['Training_Hours'] / (df['Job_Tenure'] + 1))  \n",
     ")"
    ]
   },
